# controller

./: Controller.tex  README.md  pseudo.text  pyproject.toml  setup.bash
src/control/: __init__.py  controller.py  datatypes.py  metrics.py  projection.py  utils.py
src/ee_trajectory_controller/: __init__.py  controller.py  datatypes.py  djikstra.py  geometry.py  metrics.py  projection.py
tests/: test_controller.py  test_geometry.py  test_projection.py
