[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ee-trajectory-controller"
version = "0.1.0"
description = "End effector controller to track object Pose, Twist"
requires-python = ">= 3.9.0"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ee_trajectory_controller"]

[tool.pytest.ini_options]
testpaths = ["tests"]