[project]
name = "control"
version = "0.1.0"
description = "End effector controller to track object Pose, Twist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0",
    "manifold@git+https://github.com/mbodiai/manifold.git@spatial_types",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7.0",
    "ruff",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "A", "C4", "D", "E", "F", "UP", "B", "SIM",
    "N", "ANN", "ASYNC", "S", "T20", "RET", "ARG",
    "PTH", "ERA", "PD", "I", "PLW",
]
ignore = [
    "D100", "D101", "D104", "D106",
    "ANN101", "ANN102", "ANN003", "UP009",
    "ANN204", "B026", "ANN001", "ANN401",
    "ANN202", "D107", "D102", "D103",
    "E731", "UP006", "UP035", "ANN002",
    "PLW2901", "E741", "E501", "N806",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = ["ALL"]
"**__init__.py" = ["F401"]
