[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control"
version = "0.1.0"
description = "End effector controller to track object Pose, Twist"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mbodi Team", email = "info@mbodi.ai" }]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0",
    "manifold@git+https://github.com/mbodiai/manifold.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7.0",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 140
target-version = "py311"

select = [
    # flake8-builtins
    "A",
    # flake8-commas
    "COM812",
    # flake8-comprehensions
    "C4",
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # pep8-naming
    "N",
    # flake8-annotations
    "ANN",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-print
    "T20",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # pandas-vet
    "PD",
    # Import sort
    "I",
    # avoid shadowing
    "PLW",
]
ignore = [
    "D105",
    "N805",
    "N802",
    "N806",
    "PGH004",
    "D100",
    "D101",
    "D104",
    "D106",
    "ANN003",
    "ANN204",
    "UP009",
    "B026",
    "ANN001",
    "ANN401",
    "ANN202",
    "D107",
    "D102",
    "D103",
    "E731",
    "UP006",
    "UP007",
    "UP044",
    "UP035",
    "ANN002",
    "N801",
    "N803",
    "D417",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.per-file-ignores]
"**/{docs}/*" = ["ALL"]
"**/{tests}/*" = ["S101", "ANN201"]
"**__init__.py" = ["F401"]
